--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
   </cabeçalho>
 
   <body>
-    <ul>
-      <li><a href="#">Sobre Mim </a></li>
-      <li><a href="#">Cursos</a></li>
-      <li><a href="#">Emocionais</a></li>
-      <li><a href="#">Contato</a></li>
-      <li style="float:left"><a class="active" href="#about">Ana Beatriz</a></li>
-  </ul>
+    <nav>
+      <ul>
+        <li><a href="#">Sobre Mim </a></li>
+        <li><a href="#">Cursos</a></li>
+        <li><a href="#">Emocionais</a></li>
+        <li><a href="#">Contato</a></li>
+        <li style="float:left"><a class="active" href="#about">Ana Beatriz</a></li>
+      </ul>
+    </nav>
     <header>
-      <h1>Ana Beatriz</h1>
+          <h1>Ana Beatriz</h1>
+          <h2>Bem Vindo (a)!!ao meu currículo</h2>
       <p></p>
+          <figure>
+              <img src="img/euu.jfif" alt="Uma modelo desfilando com uma roupa feita à mão detalhadissíma com recortes em babados." class="imgfigure">
+          </figure>
 
     </header>
     <div class="banner">
