--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
           <h1>Ana Beatriz</h1>
           <h2>Bem Vindo (a)!!ao meu currículo</h2>
-      <p></p>
+          <p></p>
           <figure>
               <img src="img/euu.jfif" alt="Uma modelo desfilando com uma roupa feita à mão detalhadissíma com recortes em babados." class="imgfigure">
           </figure>
@@ -35,26 +35,53 @@
 
     </div>
     <main>
-      <section class="sobre">
-        <!-- quero colocar um grid com 2 com meu avatar e um texto resumo sobre mim-->
+      <section class="sobre"id="sobre">
+          <h2>Sobre Mim</h2>
+          <div class="foto">
+                <img src="img/logo2.png">
+          </div>
+
+          <div class="texto">
+              <p>
+                 Olá sou a Ana Beatriz Ribeiro Soares, tenho 16 anos. Estou cursando o 1º ano do Ensino Médio Integrado ao Técnico Informática para Internet na Etec Profª Maria Cristina Medeiros. Gosto bastante do curso e tenho curiosidade, quero me aprofundar na aréa. Moro em Ribeirão Pires,faço aulas Ballet e Piano e busco aprimorar meus conhecimentos em (TI)
+              </p>
+          </div>
+                 <!-- quero colocar um grid com 2 com meu avatar e um texto resumo sobre mim-->
 
       </section>
-      <section class="emocionais">
+      <section class="emocionais"id="emocionais">
+        
         <!-- quero colocar um grid com 4 colunas-->
         <!-- dentro de cada coluna uma imagem relacioanada a competência e um texto sobre ela-->
 
       </section>
-      <section class="cursos">
+      <section class="cursos" id="cursos">
         
 
       </section>
-      <section class="portfolio">
+      <section class="servicos" id="servicos">
 
       </section >
-      <section class="servicos">
+      <section class="Avaliacoes"id="Avaliacoes">
 
       </section>
-      <section class="avaliacoes">
+      <section class="Contato"id="contato">
+        <h1>Contato</h1>
+        <div>
+          <img src="img/images (1).png" class="imgcontact" alt="GitHub">
+          <p><a href="https://github.com/Anabti" class="pcontact" target="_blank">GitHub</a></p>
+      </div>
+
+      <div>
+          <img src="img/images.png" class="imgcontact" alt="Email">
+          <p><a href="anabeatrizzt.i@gmail.com" class="pcontact"> </a></p>
+      </div>
+
+      <div>
+          <img src="img/linkedin.png" class="imgcontact" alt="Linkedin">
+          <p><a href="https://www.linkedin.com/in/jo%C3%A3o-victor-morais-a012691b2/" class="pcontact" target="_blank">Linkedin</a></p>
+      </div>
+
 
       </section>
 
