--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h2>Bem Vindo (a)!!ao meu currículo</h2>
           <p></p>
           <figure>
-              <img src="img/euu.jfif" alt="Uma modelo desfilando com uma roupa feita à mão detalhadissíma com recortes em babados." class="imgfigure">
+              <img src="img/eu.jfif" alt="" class="imgfigure">
           </figure>
 
     </header>
