--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <header>
           <h1>Ana Beatriz</h1>
           <h2>Bem Vindo (a)!!ao meu currículo</h2>
-          <p></p>
+          <a class="botao" href="https://github.com/Anabti" target="_blank"> Projetos no Gi
+          
           <figure>
               <img src="img/eu.jfif" alt="" class="imgfigure">
           </figure>
